--- a/Projects/snake_ladder/style.css
+++ b/Projects/snake_ladder/style.css
@@ -1,7 +1,12 @@
 #dice{
-    width: 800px;
-    height: 800px;
+    width: 300px;
+    height: 300px;
     /* background-color: rgb(252, 123, 2); */
+    background-size: 20 30;
     background-image: url("1.png");
     background-repeat: no-repeat;
+}
+#dice1{
+    width: 100px;
+    height: 100px;
 }
