--- a/Projects/snake_ladder/style.css
+++ b/Projects/snake_ladder/style.css
@@ -22,3 +22,25 @@
     padding-left: 25px;
     display: inline;
 }
+#Goti_P1{
+    position: absolute;
+display: inline-block;
+background-color: red;
+border-radius: 50%;
+width: 80px;
+height: 80px;
+text-align: center;
+z-index: 2;
+top: 0px;
+left:0px;
+}
+#Goti_P2{
+    position: absolute;
+display: inline-block;
+background-color: green;
+border-radius: 50%;
+width: 90px;
+height: 90px;
+text-align: center;
+z-index: 1;
+}
