--- a/Projects/ai/style.css
+++ b/Projects/ai/style.css
@@ -6,3 +6,11 @@
     right: 50px;
     display: none;
 }
+#location{
+    width: 150px;
+    height: 50px;
+    position: absolute;
+    top: 200px;
+    right: 5px;
+    color: green;
+}
