--- a/Projects/gesture/text/style.css
+++ b/Projects/gesture/text/style.css
@@ -13,11 +13,13 @@
     background-color: blue;
 }
 #ipt{
+    z-index: 1;
     position: fixed;
     top: 0px;
     left: 0px;
 }
 #clk{
+    z-index: 1;
     position: fixed;
     top: 0px;
     left: 200px;
