--- a/my_grav/style.css
+++ b/my_grav/style.css
@@ -1,17 +1,8 @@
-#obj {
+div{
     position: absolute;
     width: 40px;
     height: 40px;
     background-color: red;
     left: 560px;
     top: 300px;
-}
-#tar {
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    background-color: blue;
-    left: 560px;
-    top: 300px;
-	display:none;
 }
