--- a/my_grav_game/style.css
+++ b/my_grav_game/style.css
@@ -6,3 +6,12 @@
     left: 560px;
     top: 300px;
 }
+
+#tgt{
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    background-color: blue;
+    left: 560px;
+    top: 300px;
+}
