--- a/pinball2/style.css
+++ b/pinball2/style.css
@@ -5,7 +5,7 @@
     background-color: red;
     border-radius: 50%;
 	left: 560px;
-    top: 300px;
+    top: 600px;
 }
 
 #plate{
@@ -14,8 +14,11 @@
     height: 20px;
     background-color: blue;
     left: 540px;
-    top: 340px;
+    top: 640px;
 
+}
+#p1,#p2,#p3{
+	display:inline;
 }
 
 
